PC-28 Improve Profile Statistics Page Mostly working, a number of smaller outstanding bugs remain to be fixed:     - update charts without an error or duplicate calcs     - fix tooltips on column list     - fix paging     - scroll column list rather than whole page     - responsive page, i.e. change layout/heights on smaller screens     - replace empty space with placeholder     - Boolean         - hide non-applicable stats

--- a/ui/ui-feed-manager/src/main/resources/static-feed-mgr/assets/app.css
+++ b/ui/ui-feed-manager/src/main/resources/static-feed-mgr/assets/app.css
@@ -1125,12 +1125,13 @@ md-toast .md-toast-content {
 .profile .md-subhead {
   /* align heading with the charts, where charts are slightly to the right of the heading  */
   padding-left: 13px;
+  font-weight: 500;
 }
 .profile .summary {
   /* min-width so that charts do not overlap on small screens */
   min-width: 380px;
 }
-.profile .length-stats {
+.profile .stats {
   /* min-width so that charts do not overlap on small screens */
   min-width: 380px;
 }
